[gd_scene load_steps=3 format=1]

[ext_resource path="res://objects/InGameUI.gd" type="Script" id=1]
[ext_resource path="res://objects/heart.tscn" type="PackedScene" id=2]

[node name="InGameUI" type="Node2D"]

script/script = ExtResource( 1 )

[node name="heart1" parent="." instance=ExtResource( 2 )]

[node name="heart2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 45, 0 )

[node name="heart3" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 90, 0 )


